# gp2-workshop

./: .gitignore  Cargo.toml  README.md
crates/gp2ws-core/: Cargo.toml
crates/gp2ws-core/src/: calibration.rs  display.rs  encoding.rs  exe.rs  field.rs  lib.rs  magic.rs  physics_fields.rs  physics_io.rs  power_curve.rs  target.rs  tyre_fields.rs
crates/gp2ws-gui/: Cargo.toml
crates/gp2ws-gui/src/: app.rs  magic_tab.rs  main.rs  physics_tab.rs
docs/: FIELD-TESTING.md  MAGIC-T14-17-PIT-RENDER.md  NEW-FIELD-CANDIDATES.md  PARAMETER-GUIDE.md  WINDOWS7-BUILD.md
docs/plans/: 2026-06-04-gp2-workshop-editor-design.md  2026-06-04-gp2-workshop-editor-implementation.md  2026-07-14-new-physics-fields-DEVIATIONS.md  2026-07-14-new-physics-fields.md
scripts/: build-win7.sh  win7-redirect-combase.py
