[package]
name = "gp2ws-gui"
edition.workspace = true
version.workspace = true

[dependencies]
gp2ws-core = { path = "../gp2ws-core" }
# "persistence" enables cc.storage + App::save so the last-used EXE path is remembered.
# default-features disabled to drop the "accesskit" feature: its Windows backend
# (accesskit_windows -> windows/windows_result) imports WinRT + combase.dll symbols
# that only exist on Windows 8+, which breaks the Windows 7 build. We re-add the
# native features we actually use. Renderer stays glow (OpenGL), best for Win7.
eframe = { version = "0.29", default-features = false, features = [
    "glow",
    "x11",
    "wayland",
    "default_fonts",
    "persistence",
] }
egui_plot = "0.29"
rfd = "0.15"   # native file dialogs
